Yellow style, fix suggest lookup, change collapsed menu logo

--- a/src/website/Content/site-next.css
+++ b/src/website/Content/site-next.css
@@ -50,7 +50,7 @@ ul.no-bullet {
 }
 
 .box.box-primary {
-    border-top-color: #008d4c;
+    border-top-color: #f39c12;
 }
 a {
   color: #008d4c;
@@ -87,7 +87,7 @@ a {
 
 .box-action-footer>*:not(:first-child),
 .bootstrap-dialog-footer-buttons .btn{
-  border: 1px solid #f4f4f4;
+  border-left: 1px solid #f4f4f4;
 }
 
 
@@ -139,10 +139,10 @@ aside.main-sidebar,
 }
 
 .bootstrap-dialog.type-primary .modal-header {
-    background-color: #00a65a;
+    background-color: #f39c12;
 }
 .form-control:focus {
-  border-color: #00a65a;
+  border-color: #f39c12;
 }
 
 .modal-footer {
@@ -153,4 +153,12 @@ aside.main-sidebar,
 }
 .modal {
   background-color: rgba(0, 0, 0, 0.01);
+}
+
+.logo a, .sidebar-toggle {
+  text-decoration: none;
+}
+
+.text-primary {
+  color: #008d4c;
 }
